# quarry

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
crates/quarry-cli/: Cargo.toml
crates/quarry-cli/src/: main.rs
crates/quarry-cli/tests/: cli_e2e.rs
crates/quarry-context/: Cargo.toml
crates/quarry-context/src/: chunking.rs  connector.rs  error.rs  lib.rs  model.rs  store.rs
crates/quarry-core/: Cargo.toml
crates/quarry-core/src/: errors.rs  lib.rs  model.rs  query.rs  resolve.rs  tenant.rs
crates/quarry-core/tests/: model_validation.rs  query_validation.rs  resolver.rs
crates/quarry-exec/: Cargo.toml
crates/quarry-exec/src/: catalog.rs  engine.rs  error.rs  lib.rs  preagg.rs  result.rs
docs/: release-checklist.md
docs/integrations/: claude-code.md  codex.md  cursor.md
examples/chat-app/: README.md  app.py  index.html
examples/copilotkit-chat/: .env.example  README.md
examples/copilotkit-chat/apps/threejs-server/: package.json  server.mjs
examples/copilotkit-chat/apps/web/: package.json
examples/copilotkit-chat/apps/web/app/: layout.tsx  page.tsx
examples/copilotkit-chat/apps/web/app/api/copilotkit/: route.ts
models/example/: model.yml  model_iceberg.yml  query.json  query_by_region.json
models/example/context/: revenue_playbook.txt
models/example/data/: customers.csv  orders.csv
scripts/: install_integrations.py
skills/quarry-analytics/: SKILL.md
skills/quarry-analytics/agents/: openai.yaml
tests/: mcp_smoke.py
tools/mcp/: quarry_mcp_server.py
