[package]
name = "quarry-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "quarry"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

quarry-core = { path = "../quarry-core" }
quarry-exec = { path = "../quarry-exec" }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
